--- a/10_ImageMeta/ImageMetaExtractorApp/Views/MetaTabControl.xaml
+++ b/10_ImageMeta/ImageMetaExtractorApp/Views/MetaTabControl.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="ImageMetaExtractorApp.Views.MetaTabControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:prism="http://prismlibrary.com/"
@@ -14,6 +15,11 @@
                 prism:RegionManager.RegionName="MetaTabDetailsRegion"
                 SelectedValuePath="DataContext.TabName.Value"
                 SelectedValue="{Binding TabControlSelectedTitle, Mode=OneWayToSource}" >
+
+        <i:Interaction.Behaviors>
+            <v:SelectorMouseWheelBehavior />
+        </i:Interaction.Behaviors>
+
         <TabControl.Resources>
             <Style TargetType="TabItem">
                 <Setter Property="Header" Value="{Binding DataContext.TabName.Value}" />
