--- a/11_Controls/ShapeIcons/Views/SelectionFrameCheckBoxStyle.xaml
+++ b/11_Controls/ShapeIcons/Views/SelectionFrameCheckBoxStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
 
-    <Style x:Key="ColorZoneIconStyle" TargetType="{x:Type Control}" >
+    <Style x:Key="LabFrameButtonIcon" TargetType="{x:Type Control}" >
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Control}" >
@@ -17,52 +17,43 @@
                                     <Setter Property="Fill"
                                             Value="{Binding BorderBrush, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Control}}}"  />
                                 </Style>
-                                <Style TargetType="{x:Type Polygon}">
-                                    <Setter Property="StrokeThickness"
-                                            Value="4" />
-                                    <Setter Property="Fill"
-                                            Value="{Binding BorderBrush, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Control}}}"  />
-                                </Style>
                             </Grid.Resources>
 
                             <Path>
                                 <Path.Data>
                                     <CombinedGeometry GeometryCombineMode="Xor">
                                         <CombinedGeometry.Geometry1>
-                                            <EllipseGeometry RadiusX="100" RadiusY="100" Center="100,100" />
+                                            <EllipseGeometry RadiusX="100"
+                                                             RadiusY="100"
+                                                             Center="100,100" />
                                         </CombinedGeometry.Geometry1>
                                         <CombinedGeometry.Geometry2>
-                                            <EllipseGeometry RadiusX="90" RadiusY="90" Center="100,100" />
+                                            <EllipseGeometry RadiusX="90"
+                                                             RadiusY="90"
+                                                             Center="100,100" />
                                         </CombinedGeometry.Geometry2>
                                     </CombinedGeometry>
                                 </Path.Data>
                             </Path>
 
-                            <!-- C -->
                             <Path>
                                 <Path.Data>
-                                    <CombinedGeometry GeometryCombineMode="Exclude">
+                                    <CombinedGeometry GeometryCombineMode="Xor">
                                         <CombinedGeometry.Geometry1>
-                                            <CombinedGeometry GeometryCombineMode="Xor">
-                                                <CombinedGeometry.Geometry1>
-                                                    <EllipseGeometry RadiusX="42" RadiusY="38" Center="75,103" />
-                                                </CombinedGeometry.Geometry1>
-                                                <CombinedGeometry.Geometry2>
-                                                    <EllipseGeometry RadiusX="30" RadiusY="21" Center="83,103" />
-                                                </CombinedGeometry.Geometry2>
-                                            </CombinedGeometry>
+                                            <RectangleGeometry Rect="45,65,110,70" />
                                         </CombinedGeometry.Geometry1>
                                         <CombinedGeometry.Geometry2>
-                                            <RectangleGeometry Rect="91,60,40,90" />
+                                            <RectangleGeometry Rect="30,50,140,100" />
                                         </CombinedGeometry.Geometry2>
                                     </CombinedGeometry>
                                 </Path.Data>
                             </Path>
 
-                            <!-- Z -->
-                            <Polygon Points="110,67 164,67 164,76 161,80 110,80" />
-                            <Polygon Points="160,70 161,80 124,130 107,130 107,128 145,78" />
-                            <Polygon Points="120,125 164,125 164,138 107,138 107,128" />
+                            <Path Opacity="0.2">
+                                <Path.Data>
+                                    <RectangleGeometry Rect="45,65,110,70"/>
+                                </Path.Data>
+                            </Path>
 
                         </Grid>
                     </Viewbox>
@@ -71,26 +62,24 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ColorZoneCheckBoxStyle" TargetType="{x:Type CheckBox}" >
+    <Style x:Key="SelectionFrameCheckBoxStyle" TargetType="{x:Type CheckBox}" >
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="CheckBox.IsChecked"
-                                 Value="True">
-                            <Setter TargetName="ColorZoneButtonIcon"
+                        <Trigger Property="CheckBox.IsChecked" Value="True">
+                            <Setter TargetName="LabFrameButtonIcon"
                                     Property="Control.BorderBrush"
                                     Value="{StaticResource AccentBrushKey}" />
                         </Trigger>
-                        <Trigger Property="ButtonBase.IsMouseOver"
-                                 Value="True">
-                            <Setter TargetName="ColorZoneButtonIcon"
+                        <Trigger Property="ButtonBase.IsMouseOver" Value="True">
+                            <Setter TargetName="LabFrameButtonIcon"
                                     Property="Control.BorderBrush"
                                     Value="{StaticResource Highlight2BorderBrushKey}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
-                    <Control x:Name="ColorZoneButtonIcon"
-                             Style="{StaticResource ColorZoneIconStyle}"
+                    <Control x:Name="LabFrameButtonIcon"
+                             Style="{StaticResource LabFrameButtonIcon}"
                              BorderBrush="{StaticResource BorderBrushKey}" />
                 </ControlTemplate>
             </Setter.Value>
