--- a/11_Controls/ShapeIcons/Views/FaceCheckBoxStyle.xaml
+++ b/11_Controls/ShapeIcons/Views/FaceCheckBoxStyle.xaml
@@ -111,10 +111,10 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="ButtonBase.IsMouseOver" Value="True">
                             <Setter TargetName="FaceOffIcon"
-                                    Property="UserControl.BorderBrush"
+                                    Property="Control.BorderBrush"
                                     Value="{StaticResource Highlight2BorderBrushKey}" />
                             <Setter TargetName="FaceOnIcon"
-                                    Property="UserControl.BorderBrush"
+                                    Property="Control.BorderBrush"
                                     Value="{StaticResource Highlight2BorderBrushKey}" />
                         </Trigger>
                         <Trigger Property="CheckBox.IsChecked" Value="False">
